hopefully fix dark mode bug

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,10 +2,13 @@
 
 body {
   color: @dark;
+  background-color: white;
   transition: all 0.3s ease-in-out;
 }
 
 ::selection {
+  background-color: @neongreen;
+  color: @dark;
 }
 
 // navbar
@@ -238,8 +241,8 @@ body {
   }
 
   .project-cover {
-    max-width: 60%;
     border-radius: 10px;
+    max-width: 60%;
     // filter: drop-shadow(0px 2px 2px #d1d1d1);
 
     @media @breakpoint {
